# LanggraphProjects

./: .gitignore  Notes3.md  Notes4.md  README.md  pyproject.toml
1_foundations/: ChatWithPushNotifications.ipynb  LinkedinChatUrself.ipynb  TestingAmdocsGenAi.ipynb
1_foundations/me/: summary.txt
4_langgraph/: 1_lab1.ipynb  3_lab3.ipynb  4_lab4.ipynb  ChaatWithGoogleSearchAndPushNotif.ipynb  DatasetGenerator.py  sidekick.py  sidekick_tools.py  synthetic_dataset.json
4_langgraph/sandbox/: trip_map.html
5_RAG/: PersonalCompanyKnowledgeWorker.ipynb  RAGInusranceLLM.ipynb
Agent_Notes/: Notes1.md  Notes2.md
LLM_Notes/: Notes1.md  Notes2.md  Notes3.md  Notes4.md  Notes5.md  Notes6.md  Notes7.md
PersonalKnowledgeWorker/: README.md  chunk_creator.py  config.py  gradio_app.py  image_processor.py  main.py  requirements.txt  vector_store.py
