[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "azure-core>=1.32.0",
    "azure-identity>=1.19.0",
    "bs4>=0.0.2",
    "beautifulsoup4>=4.14.2",
    "bitsandbytes>=0.43.0",
    "chromadb>=1.1.0",
    "folium>=0.14.0",
    "geopy>=2.4.0",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.0.50",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "matplotlib>=3.8.0",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "msgraph-core>=1.3.0",
    "msgraph-sdk>=1.17.0",
    "nbformat>=5.9.0",
    "numpy>=1.24.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "pandas>=2.1.0",
    "peft>=0.11.0",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.16.2",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "sentence-transformers>=2.3.0",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "tiktoken>=0.11.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "wikipedia>=1.4.0",
    "accelerate>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]
